tests/tricky_spine.m31
(* Here is an example where we assume an equality that
   allows us to create weird beta redeces, and therefore
   also weird spines. *)

constant Bool : Type
constant Nat : Type

constant true : Bool
constant false : Bool

constant zero : Nat
constant succ : Nat → Nat
constant plus : Nat → Nat → Nat
constant iszero : Nat → Bool

constant eq1 : (Nat → Nat) ≡ (Nat → Bool)
constant eq2 : (Nat → Bool) ≡ (Nat → Nat)

let f = (λ (n : Nat), iszero (succ n))
check f

(* Succeed *)
check with equality_in betas hints handle
  let _ = hint eq1 in (f : Nat → Nat)

(* Fail *)
check with equality_in betas hints handle
  let _ = hint eq2 in (f : Nat → Nat)

